--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">This button does nothing</button>
 </header>
 <div class="w3-content">
-  <p class="w3-text-grey">Put content here</p>
+  <h1>Put content here</h1>
 </div>
 <!--
 //First Grid
@@ -111,7 +111,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">
   <div class="w3-xlarge w3-padding-32">
-    <li><a href="https://github.com/cantremebermyurl/" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+<a href="https://github.com/cantremebermyurl/"><img src="GitHub-Mark-32px.png" alt="GitHub-Mark-32px.png"></a>
  </div>
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
