--- a/index.html
+++ b/index.html
@@ -1,135 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>API TEST</title>
 <head>
-  <!-- ****** faviconit.com favicons ****** -->
-  	<link rel="shortcut icon" href="/favicon.ico">
-  	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
-  	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
-  	<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
-  	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
-  	<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-  	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-  	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-  	<link rel="apple-touch-icon" href="/favicon-57.png">
-  	<link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
-  	<link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
-  	<link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
-  	<link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
-  	<link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
-  	<link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
-  	<link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
-  	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
-  	<meta name="msapplication-TileColor" content="#FFFFFF">
-  	<meta name="msapplication-TileImage" content="/favicon-144.png">
-  	<meta name="msapplication-config" content="/browserconfig.xml">
-  	<!-- ****** faviconit.com favicons ****** -->
+  <h1>API TEST</h1>
 </head>
-<title>TEST SITE</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-anchor,.fa-coffee {font-size:200px}
-</style>
-<body>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">A</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Doesn't</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Work</a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">A</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Doesn't</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Work</a>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Hello World!</h1>
-  <p class="w3-xlarge">Test page</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">This button does nothing</button>
-</header>
-<div class="w3-content">
-  <h1>Put content here</h1>
-  <iframe width="320" height="240"
-src="https://www.youtube.com/embed/l2KEj599a_8?controls=0">
-</iframe>
-</div>
-<!--
-//First Grid
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-
-    <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
-    </div>
-  </div>
-</div>
-
-//Second Grid
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
-    </div>
-
-    <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</div>
-
-<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Quote of the day: Dont have friends? Befriend the bugs in your code!</h1>
-</div>
--->
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">
-  <div class="w3-xlarge w3-padding-32">
-<a href="https://github.com/cantremebermyurl/"><img src="GitHub-Mark-32px.png" alt="GitHub-Mark-32px.png"></a>
- </div>
- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
-
-<script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-</script>
-
+  <button type="button">API BUTTON</button>
 </body>
 </html>
