removed everything added weather api

--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>API TEST</title>
+
 <head>
-  <h1>API TEST</h1>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>HELLO TAB!</title>
+  <link rel="icon" href="/favicon.ico">
+  <h1><a href="https://www.openweathermap.org">OpenWeatherMap</a> API test</h1>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </head>
-  <button type="button">API BUTTON</button>
+<body>
+  <div class="weather-container">
+    <h1>Alameda</h1>
+    <img class="icon">
+    <p class="weather"></p>
+    <span class="temp"></span>
+    <span>°F</span>
+  </div>
 </body>
 </html>
+<footer>
+  <a href="https://github.com/cantremebermyurl">
+    <img src="GitHub-Mark-32px.png" alt="GitHub cat png"> This is me
+  </a>
+</footer>
