added s to http

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HELLO TAB!</title>
   <link rel="icon" href="/favicon.ico">
   <h1><a href="https://www.openweathermap.org">OpenWeatherMap</a> API test</h1>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
