remove bg img added soft blue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="script.js"></script>
 </head>
 
-<body class="bg" style="background-color:#686868;text-align:center">
+<body class="bg">
   <div class="weather-container">
     <h1><a href="https://www.openweathermap.org">OpenWeatherMap</a> API test</h1>
     <h1>Alameda</h1>
