link to char lodestone on portrait

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </span>
     <h1>Final Fantasy XIV API Test</h1>
     <p>
-      <img class="portrait" alt="character portrait" style="width:256px;height:349px;">
+      <a class="portraitURL">
+        <img class="portrait" alt="character portrait" style="width:256px;height:349px;">
+      </a>
     </p>
     <p>
       <b><span class="name"/></span></b>.
