trying to get attr() to work
$(".portraitURL").attr("href", lodestone);

image wasnt being turned into a link on live website, maybe this will fix it?

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </span>
     <h1>Final Fantasy XIV API Test</h1>
     <p>
-      <a class="portraitURL">
+      <a class="portraitURL" href="">
         <img class="portrait" alt="character portrait" style="width:256px;height:349px;">
       </a>
     </p>
