--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>HELLO TAB!</title>
-  <link rel="icon" href="favicon.ico">
+  <title>HELLO TAB!</title>
+  <link rel="icon" href="/favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="script.js">loadXIV();</script>
-  <script type="text/javascript">
-    function active(){
-      var searchField = document.getElementById('searchField');
-      searchField.value = '';
-    }
-  </script>
+  <script src="script.js"></script>
 </head>
 
 <body class="bg">
@@ -34,11 +28,6 @@
       </a>
     </span>
     <h1>Final Fantasy XIV API Test</h1>
-    <p>
-      <form class="xivCharSearch" action="#" onsubmit="return search(this) && loadXIV();" method="post">
-        <input type="text" id="searchField" placeholder="Search your character" value="Search your character" onmousedown="active();"/><input type="submit" id="searchButton" value="Search">
-      </form>
-    </p>
     <p>
       <a class="portraitURL" href="">
         <img class="portrait" alt="character portrait" style="width:256px;height:349px;">
