--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <title>HELLO TAB!</title>
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </head>
