Added server dropdown list that is auto populated via /servers api. If no server is selected in the list it defaults to searching character name across all servers.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <p>
       <form class="xivCharSearch" action="#" onsubmit="search(this);return false" method="post">
         <input type="text" id="searchField" placeholder="Search your character" value="Search your character" onmousedown="active();"/><input type="submit" id="searchButton" value="Search">
+        <p>
+          <select id="serverList" selected="-Choose a server-">
+            <option value="">-Choose a server-</option>
+          </select>
+        </p>
       </form>
       <span class="searchingText"></span>
     </p>
