--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
       <span class="searchingText"></span>
     </p>
     <div class="row">
+      <div class="leftBuffer">
+      </div>
       <div class="leftColumn">
-        <p id="equipmentL"></p>
       </div>
       <div class="centerColumn">
         <p>
@@ -77,7 +78,8 @@
         <span class="server">Server: </span>
       </div>
       <div class="rightColumn">
-        <p id="equipmentR"></p>
+      </div>
+      <div class="rightBuffer">
       </div>
     </div>
   </div>
