Tweeking nav bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </script>
   <div class="links">
     <a class="home" href="./index.html">Home</a>
-    <a class="XIV" href="./XIV.html">FFXIV character search</a>
+    <a class="XIV" href="./XIV.html">FFXIVapi</a>
     <a class="about" href="https://github.com/cantremebermyurl/cantremembermyurl.github.io#cantremembermyurlgithubio" target="_blank">About</a>
   </div>
 </head>
