--- a/XIV.html
+++ b/XIV.html
@@ -61,6 +61,7 @@
           <p class="portrait">
             <a class="portraitURL" href=""><img class="portraitImg" alt="character portrait" style="width:256px;height:349px;"></a>
           </p>
+          <p class="FCtag"></p>
           <p class="pName">
             <b><span class="name"/></span></b>
           </p>
