Fixed fc tag for mobile view

--- a/XIV.html
+++ b/XIV.html
@@ -61,7 +61,9 @@
           <p class="portrait">
             <a class="portraitURL" href=""><img class="portraitImg" alt="character portrait" style="width:256px;height:349px;"></a>
           </p>
-          <p class="FCtag"></p>
+          <p class="pFC">
+          <span class="FCtag"></span>
+          </p>
           <p class="pName">
             <b><span class="name"/></span></b>
           </p>
